--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# Supabase Configuration
+# Get these from your Supabase Dashboard > Settings > API
+VITE_SUPABASE_URL=your_supabase_project_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
 # Cloudflare Stream Configuration
 # Get these from your Cloudflare Dashboard > Stream > API Tokens
 VITE_CLOUDFLARE_ACCOUNT_ID=your_account_id_here
